need to figure out gitkraken

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -201,7 +201,7 @@ services:
       - sheepdog-service
       - peregrine-service
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost"]
+      test: ["CMD-SHELL", "curl -f http://localhost_status"]
       interval: 60s
       timeout: 5s
       retries: 10
